# bicycles-seoul

./: LICENSE.txt  Makefile  README.md  best_lgbm_with_transform.joblib  pyproject.toml
bicycles_seoul/: __init__.py  dataset.py  features.py  plots.py
bicycles_seoul/modeling/: predict.py  train.py
bicycles_seoul/models/: best_lgbm.joblib  pipeline.joblib
data/raw/: data-downloader
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1.0-ditp-seoul-bicycle-traffic-data-downloader.ipynb  1.1-ditp-seoul-pollution-data-downloader.ipynb  1.2-ditp-merging-datasets.ipynb  2.0-ditp-EDA.ipynb  2.1-ditp-handling-multicollinearity.ipynb  2.2-ditp-handling-skewness.ipynb  2.2-ditp-preprocessing-pipeline.ipynb  2.3-ditp-final-preprocessing.ipynb  3.0-ditp-model-training-finetuning.ipynb
